<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:paddingHorizontal="30dp">

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textSize="30sp"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/pretendard_extrabold"
        android:textColor="@color/main"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/login_hint_email"
        android:padding="13dp"
        android:textColor="@color/black"
        android:singleLine="true"
        android:paddingStart="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/login_txt"
        android:autofillHints=""
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/passwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="14dp"
        android:singleLine="true"
        android:textSize="16sp"
        android:padding="13dp"
        android:paddingStart="20dp"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/login_complete_btn"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/passwd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="27dp"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_go_register_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="27dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/hint"
        />

</androidx.constraintlayout.widget.ConstraintLayout>